--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -4,10 +4,62 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            background-image: url('https://i.pinimg.com/originals/c2/e9/02/c2e902e031e1d9d932411dd0b8ab5eef.jpg');
+            background-size: cover;
+            background-position: center;
+        }
+        .container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+
+        h1 {
+            color: #007bff;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .form-label {
+            font-weight: bold;
+        }
+
+        .form-control {
+            border-radius: 5px;
+            border: 1px solid #ced4da;
+        }
+
+        .text-danger {
+            color: #dc3545;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            margin-right: 5px;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+
+        .btn-link {
+            color: #007bff;
+        }
+
+        .btn-link:hover {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 <section layout:fragment="content" class="container mt-5">
-    <h1 class="mb-4">Login</h1>
+    <h1 class="mb-4 text-center ">Login</h1>
     <form th:action="@{/login}" method="post">
         <div th:if="${param.error}" class="alert alert-danger">
             Invalid username and password.
@@ -30,6 +82,7 @@
         <div class="d-grid gap-2 form-action">
             <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
             <a th:href="@{/oauth2/authorization/google}" class="btn btn-danger btn-lg btn-block">Login with Google</a>
+            <a th:href="@{/oauth2/authorization/facebook}" class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998;">Login with Facebook</a>
             <p class="mt-3 mb-0">Don't have an account? <a class="text-info text-center" th:href="${'/register'}">Sign up?</a> </p>
         </div>
     </form>
