--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -3,36 +3,91 @@
 <head>
     <title>Register</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            background-image: url('https://i.pinimg.com/originals/c2/e9/02/c2e902e031e1d9d932411dd0b8ab5eef.jpg');
+            background-size: cover;
+            background-position: center;
+        }
+
+        .container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+
+        h1 {
+            color: #007bff;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .form-label {
+            font-weight: bold;
+        }
+
+        .form-control {
+            border-radius: 5px;
+            border: 1px solid #ced4da;
+        }
+
+        .text-danger {
+            color: #dc3545;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            margin-right: 5px;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+
+        .btn-link {
+            color: #007bff;
+        }
+
+        .btn-link:hover {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 <section layout:fragment="content" class="container mt-5">
-    <h1 class="mb-4">Login</h1>
-    <form th:action="@{/register}" method="post">
+    <h1 class="mb-4">Register</h1>
+    <form th:action="@{/register}" method="post" class="row g-3">
         <div th:if="${errors}" class="alert alert-danger justify-content-center" role="alert">
             <ul>
                 <li th:each="error : ${errors}" th:text="${error}" class="text-danger text-start"></li>
             </ul>
         </div>
-        <div class="form-group mb-4">
-            <label for="email"></label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email">
+        <div class="col-md-6">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
         </div>
-        <div class="form-group mb-4">
-            <label for="username"></label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username">
+        <div class="col-md-6">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
         </div>
-        <div class="form-group mb-4">
-            <label for="password"></label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password">
+        <div class="col-md-6">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
         </div>
-        <div class="form-group mb-4">
-            <label for="phone"></label>
-            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter your phone">
+        <div class="col-md-6">
+            <label for="phone" class="form-label">Phone</label>
+            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter your phone" required>
         </div>
-        <div class="d-grid gap-2 form-action">
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
-            <a th:href="@{/oauth2/authorization/google}" class="btn btn-danger btn-lg btn-block">Sign up with Google</a>
-            <p class="mt-3 mb-0">Already have an account? <a class="text-info text-center" th:href="${'/login'}">Login in?</a></p>
+        <div class="col-12">
+            <div class="d-grid gap-2 form-action">
+                <button type="submit" class="btn btn-primary btn-lg">Sign up</button>
+                <a th:href="@{/oauth2/authorization/google}" class="btn btn-danger btn-lg">Sign up with Google</a>
+            </div>
+            <p class="mt-3 mb-0 text-center">Already have an account? <a class="text-info" th:href="@{/login}">Login in?</a></p>
         </div>
     </form>
 </section>
