--- a/src/main/resources/templates/products/product-list.html
+++ b/src/main/resources/templates/products/product-list.html
@@ -102,6 +102,9 @@
 
         .product-card img {
             height: 200px;
+            flex: 2; /* Chiếm 2/3 chiều cao thẻ */
+            width: 100%;
+            object-fit: cover;
             object-fit: cover;
         }
     </style>
