--- a/src/main/resources/templates/cart/order-confirmation.html
+++ b/src/main/resources/templates/cart/order-confirmation.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 <section layout:fragment="content" class="container mt-3">
-    <h1>Order Confirmation</h1>
+    <h1>Đặt hàng thành công</h1>
     <p th:text="${message}"></p>
 </section>
 </body>
