--- a/src/main/resources/templates/categories/categories-list.html
+++ b/src/main/resources/templates/categories/categories-list.html
@@ -10,19 +10,36 @@
             background-color: #f8f9fa;
         }
 
+        .container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+
         h1 {
             color: #007bff;
             text-align: center;
-            margin-top: 20px;
+            margin-bottom: 20px;
         }
 
-        section {
-            margin: 20px;
+        .form-label {
+            font-weight: bold;
+        }
+
+        .form-control {
+            border-radius: 5px;
+            border: 1px solid #ced4da;
+        }
+
+        .text-danger {
+            color: #dc3545;
         }
 
         .btn-primary {
             background-color: #007bff;
             border-color: #007bff;
+            margin-right: 5px;
         }
 
         .btn-primary:hover {
@@ -30,32 +47,21 @@
             border-color: #0056b3;
         }
 
-        .table {
-            background-color: #ffffff;
+        .btn-link {
+            color: #007bff;
         }
 
-        .table th, .table td {
-            border: 1px solid #dee2e6;
-        }
-
-        .table th {
-            background-color: #007bff;
-            color: #ffffff;
-        }
-
-        .table tbody tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        .btn-success, .btn-danger {
-            margin-right: 5px;
+        .btn-link:hover {
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
 <section layout:fragment="content">
-    <h1>Categories List</h1>
-
+    <h1>Danh sách thể loại</h1>
+    <div class="mb-3">
+        <a th:href="@{/categories/add}" class="btn btn-primary">Thêm thể loại</a>
+    </div>
     <table class="table table-bordered table-hover">
         <thead class="table-dark">
         <tr>
