--- a/src/main/resources/templates/orders/order-list.html
+++ b/src/main/resources/templates/orders/order-list.html
@@ -5,40 +5,54 @@
 <head>
     <title>Danh Sách Đơn Hàng</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
         .container {
-            margin-top: 20px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
-        .table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        .table th, .table td {
-            border: 1px solid #dee2e6;
-            padding: 8px;
-        }
-        .table th {
-            background-color: #343a40;
-            color: #ffffff;
+
+        h1 {
+            color: #007bff;
             text-align: center;
+            margin-bottom: 20px;
         }
-        .table td {
-            vertical-align: middle;
-            text-align: left;
+
+        .form-label {
+            font-weight: bold;
         }
-        .table ul {
-            list-style-type: none;
-            padding-left: 0;
-            margin-bottom: 0;
+
+        .form-control {
+            border-radius: 5px;
+            border: 1px solid #ced4da;
         }
-        .table ul li {
-            margin-bottom: 5px;
+
+        .text-danger {
+            color: #dc3545;
         }
-        .btn-view {
-            display: block;
-            width: 70px;
-            margin: 0 auto;
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            margin-right: 5px;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+
+        .btn-link {
+            color: #007bff;
+        }
+
+        .btn-link:hover {
+            text-decoration: none;
         }
     </style>
 </head>
