--- a/src/main/resources/templates/products/add-product.html
+++ b/src/main/resources/templates/products/add-product.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 <section layout:fragment="content" class="container mt-5">
-    <h1>Add New Product</h1>
+    <h1>Thêm cuốn sách mới</h1>
     <form th:action="@{/products/add}" th:object="${product}" method="post" class="needs-validation" novalidate enctype="multipart/form-data">
         <div class="mb-3">
             <label for="name" class="form-label">Name:</label>
