--- a/src/main/resources/templates/users/userlist.html
+++ b/src/main/resources/templates/users/userlist.html
@@ -5,7 +5,6 @@
 <head>
     <title>Danh Sách Người Dùng</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
     <style>
         .table {
             width: 100%;
@@ -59,10 +58,10 @@
 
         /* Custom styles for container */
         .container {
-            max-width: 960px; /* Adjust max-width as needed */
-            margin: 0 auto;
-            padding: 15px;
-            text-align: center;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
     </style>
 </head>
