--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,7 +7,54 @@
     <title>Layout</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
 
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
+
+        /*  links sidebar CSS  */
+        ._social-links {
+            position: fixed;
+            right: 0;
+            top: 50%;
+            transform: translatey(-50%);
+            padding: 1em 0.5em 1em 1em;
+            background: #fafafa;
+            border-radius: 0.5em 0 0 0.5em;
+            box-shadow: -4px 0px 0px hotpink;
+            transition: all 300ms ease;
+        }
+
+        ._social-links:hover {
+            box-shadow: -8px 0px 20px hotpink;
+            padding: 1em;
+        }
+
+        ._links-list {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+        }
+        ._social-link a {
+            color: #111;
+            font-size: 1.5rem;
+            transition: all 200ms ease;
+        }
+        ._social-link a:visited {
+            color: #111;
+        }
+        ._social-link a:hover {
+            color: hotpink;
+            font-size: 1.75rem;
+        }
+
+        /* //////////////////////////// */
+
+    </style>
     <style>
 
         .nav-link:hover {
@@ -101,6 +148,9 @@
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
                     <a class="nav-link text-white active" aria-current="page" href="/order">Quản Lý Đơn Hàng</a>
                 </li>
+                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
+                    <a class="nav-link text-white active" aria-current="page" href="https://sandbox.vnpayment.vn/merchantv2/Home/Dashboard.htm">Quản lý đơn hàng VNPAY</a>
+                </li>
 
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
@@ -127,7 +177,16 @@
         </div>
     </div>
 
+    <!-- Social links -->
+    <aside class="_social-links">
+        <ul class="_links-list">
+            <li class="_social-link"><a href="https://www.facebook.com/uess5fine/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="_social-link"><a href="https://github.com/hahuythang159" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li class="_social-link"><a href="https://www.linkedin.com/in/thangfrontend/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="_social-link"><a href="https://www.instagram.com/h_thang_h/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 
+        </ul>
+    </aside>
 </nav>
 <!-- Chatbox dialog -->
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
