--- a/src/main/resources/templates/orders/order-list.html
+++ b/src/main/resources/templates/orders/order-list.html
@@ -59,6 +59,7 @@
 <body>
 <div class="container" layout:fragment="content">
     <h1 class="mt-4 mb-4">Danh Sách Đơn Hàng</h1>
+    <a class="btn btn-primary" href="/order/export" target="_blank">Xuất File Excel Đơn Đặt Hàng</a>
     <div class="table-responsive">
         <table class="table table-bordered table-hover">
             <thead class="table-dark">
