--- a/src/main/resources/templates/products/product-sales.html
+++ b/src/main/resources/templates/products/product-sales.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>Sales Quantity</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+        h1 {
+            color: #007bff;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-$END$
+<section layout:fragment="content">
+    <h1>Số lượng và số tiền bán ra của từng sản phẩm</h1>
+    <table class="table table-bordered table-hover">
+        <thead class="table-dark">
+        <tr>
+            <th>ID</th>
+            <th>Tên sản phẩm</th>
+            <th>Số lượng bán ra</th>
+            <th>Số tiền bán ra</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="entry : ${sales}">
+            <td th:text="${entry.key.id}"></td>
+            <td th:text="${entry.key.name}"></td>
+            <td th:text="${entry.value}"></td>
+            <td th:text="${salesAmount.get(entry.key)}"></td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+            <td colspan="3" class="text-end"><strong>Tổng số tiền bán ra:</strong></td>
+            <td th:text="${totalSalesAmount}"></td>
+        </tr>
+        </tfoot>
+    </table>
+</section>
 </body>
 </html>
